--- a/app/src/main/res/drawable/primebutton.xml
+++ b/app/src/main/res/drawable/primebutton.xml
@@ -25,6 +25,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle" android:padding="1dp" >
 <!-- you can use any color you want I used here gray color-->
-<solid android:color="@color/navy"/>
+<solid android:color="@color/white"/>
 <corners android:radius="15dp"/>
+    <stroke android:color="@color/navy"
+        android:width="2dp"/>
 </shape>
