--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="navy">#0A142D</color>
     <color name="green">#5BBA47</color>
+    <color name="grey">#D0D0D0</color>
 </resources>
